--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<nav class="navbar is-link">
+    <div class="navbar-start">
+        <a class="navbar-item title">
+            {{title}} | {{getRights()}}
+        </a>
+    </div>
+</nav>
