--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<nav class="navbar is-link">
+    <div class="navbar-start">
+        <a class="navbar-item title">
+           Hello
+        </a>
+    </div>
+    <app-navbar></app-navbar>
+</nav>
