Vezbe 4 - Dodavanje Angular Router-a

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header> </app-header>
 
+<router-outlet></router-outlet>
+
 <app-quote-form (addedQuote)="addQuote($event)"> </app-quote-form>
 
 <!-- <app-quote-element text="Novi tekst" author="Novi autor"  ></app-quote-element> -->
