--- a/src/app/quote-form/quote-form.component.html
+++ b/src/app/quote-form/quote-form.component.html
@@ -13,7 +13,7 @@
         <div class="field">
           <label class="label">Author</label>
           <div class="control">
-            <input class="input" type="text" (input)="onChangeOfAuthor($event)">
+            <input class="input" type="text" [(ngModel)]="author">
           </div>
         </div>
   
