--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,13 @@
 <nav class="navbar is-link">
     <div class="navbar-start">
-        <a class="navbar-item title">
-            {{title}} | {{getRights()}}
-        </a>
-    </div>
+        <div class="navbar-brand">
+            <a class="navbar-item title is-vcentered">
+                {{title}}| {{getRights()}}
+             </a>
+        </div>
+
+    <a class="navbar-item" routerLink="/"> Home </a>
+    <a class="navbar-item" routerLink="quotes"> Quotes </a>
+    <a class="navbar-item" routerLink="fun-facts"> Fun facts </a>
+</div>
 </nav>
