--- a/src/app/quotes/quotes.page.html
+++ b/src/app/quotes/quotes.page.html
@@ -1,13 +1,12 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>quotes</ion-title>
+    <ion-title> Quotes</ion-title>
   </ion-toolbar>
 </ion-header>
+<ion-content class="ion-padding">
+  <ion-buttons class="ion-justify-content-center">
+    <ion-button routerLink="/fun-facts" color="secondary" fill="solid"> Fun facts
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">quotes</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    </ion-button>
+  </ion-buttons>
 </ion-content>
