--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,40 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu side="start" content-id="main">
+    <ion-header>
+      <ion-toolbar>
+        <ion-title> Menu </ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+    <ion-content>
+      <ion-list lines="none">
+        <ion-item>
+          <ion-icon name="person-circle" slot="start"> </ion-icon>
+
+          <ion-label> My Profile </ion-label>
+        </ion-item>
+
+        <ion-item routerLink="/quotes">
+          <ion-icon name="document-text" slot="start"> </ion-icon>
+
+          <ion-label> Quotes </ion-label>
+        </ion-item>
+
+        <ion-menu-toggle>
+          <ion-item routerLink="/fun-facts">
+            <ion-icon name="happy" slot="start"> </ion-icon>
+
+            <ion-label> Fun facts </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+        <ion-item>
+          <ion-icon name="log-out" slot="start"> </ion-icon>
+
+          <ion-label> Logout </ion-label>
+        </ion-item>
+      </ion-list>
+    </ion-content>
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
