--- a/src/app/fun-facts/fun-facts.page.html
+++ b/src/app/fun-facts/fun-facts.page.html
@@ -11,5 +11,6 @@
     <ion-button routerLink="/quotes" color="secondary" fill="solid"> Quotes
 
     </ion-button>
-  </ion-buttons>
+  </ion-buttons><br>
+  <ion-img src="https://cdn.quotesgram.com/small/96/79/322233589-funny-jackson-stiles-teen-wolf-Favim_com-2738624.jpg"></ion-img>
 </ion-content>
