--- a/src/app/quotes/quotes.page.html
+++ b/src/app/quotes/quotes.page.html
@@ -11,5 +11,7 @@
     <ion-button routerLink="/fun-facts" color="secondary" fill="solid"> Fun facts
 
     </ion-button>
-  </ion-buttons>
+  </ion-buttons><br>
+  <ion-img src="https://favim.com/pd/s7/orig/151209/cast-funny-sarcasm-stiles-Favim.com-3741907.jpg"></ion-img>
+
 </ion-content>
